# tax

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  sanitizers.yml  tests.yml  wheels.yml
bench/: bench_ops.cpp
benchmarks/: CMakeLists.txt  univariate.cpp
cmake/: taxConfig.cmake.in
docs/: api_reference.md  eigen_integration.md  getting_started.md  index.md  math_operations.md
docs/ads/: api.md  examples.md  index.md  math.md
docs/core/: api.md  examples.md  index.md  math.md
docs/taylor/: api.md  examples.md  index.md  math.md
docs/vector/: api.md  examples.md  index.md  math.md
downstream/: README.md
downstream/cam/: .gitignore  CMakeLists.txt  README.md
downstream/cam/apps/: scvx_main.cpp  state_back_prop.cpp  state_prop.cpp
downstream/cam/include/cam/: anomaly.hpp  cam.hpp  collision.hpp  constants.hpp  elements.hpp  frames.hpp  linalg.hpp  multi_impulse.hpp  propagator.hpp  tca.hpp
downstream/cam/include/cam/optim/: nlp.hpp  optim.hpp  scvx.hpp  socp.hpp
downstream/cam/runtime/: README.md
downstream/cam/tests/: test_kepler.cpp  test_scvx.cpp  test_tca.cpp
examples/: CMakeLists.txt  main.cpp  two_body.cpp  two_body_elliptic.cpp
include/tax/: _testutils.hpp  ads.hpp  aliases.hpp  combinatorics.hpp  da.hpp  fwd.hpp  index.hpp  kernel.hpp  kernels.hpp  leaf.hpp  md_kernel.hpp  operators.hpp  tax.hpp  tte.hpp  utils.hpp
include/tax/ads/: ads_node.hpp  ads_runner.hpp  ads_tree.hpp  box.hpp
include/tax/basis/: basis.hpp  chebyshev_traits.hpp  convert_ops.hpp  hermite_traits.hpp  legendre_traits.hpp  tags.hpp  taylor_traits.hpp  traits.hpp  transforms.hpp
include/tax/eigen/: adapters.hpp  derivative.hpp  eval.hpp  invert_map.hpp  map_inv.hpp  num_traits.hpp  tensor_function.hpp  tensors.hpp  types.hpp  value.hpp  variables.hpp
include/tax/expr/: arithmetic_ops.hpp  base.hpp  bin_expr.hpp  func_expr.hpp  math_ops.hpp  product_expr.hpp  scalar_expr.hpp  sum_expr.hpp  unary_expr.hpp
include/tax/kernels/: algebra.hpp  cauchy.hpp  ops.hpp  transcendental.hpp  trigonometric.hpp
include/tax/la/: types.hpp
include/tax/ode/: integrate.hpp  integrate_ads.hpp  solution.hpp  step.hpp  stepsize.hpp  taylor.hpp  taylor_integrator.hpp
include/tax/ode/taylor/: controller.hpp  integrator.hpp  stepper.hpp  types.hpp
include/tax/operators/: arithmetic.hpp  common.hpp  math_binary.hpp  math_ternary.hpp  math_unary.hpp  paired.hpp
include/tax/utils/: aliases.hpp  combinatorics.hpp  enumeration.hpp  fwd.hpp  leaf.hpp  streaming.hpp
python/: .gitignore  CMakeLists.txt  README.md
python/src/: bindings.cpp  operations.hpp  ops_access.cpp  ops_arith.cpp  ops_hyper.cpp  ops_misc.cpp  ops_pow.cpp  ops_scalar.cpp  ops_trig.cpp  runtime_te.hpp
python/tax/: __init__.py
python/tests/: test_te.py
tests/: CMakeLists.txt  testCombinatorics.cpp  testCompInverse.cpp  testCompose.cpp  testDA.cpp  testEigenTensors.cpp  testEnumeration.cpp  testExprErf.cpp  testExprHyp.cpp  testExprInvTrig.cpp  testExprLog.cpp  testExprPow.cpp  testExprPower.cpp  testExprTrig.cpp  testIndex.cpp  testKernel.cpp  testKernels.cpp  testODETaylor.cpp  testUtils.cpp  testUtils.hpp
tests/ads/: plot_gaussian_ads.py  testAdsGaussian.cpp  testAdsTree.cpp
tests/chebyshev/: testChebyshevBasic.cpp
tests/core/: testCompose.cpp  testDA.cpp  testDerivInteg.cpp  testNested.cpp  testTTE.cpp
tests/dace/: CMakeLists.txt  testMultivariate.cpp  testNorm.cpp  testUnivariate.cpp
tests/eigen/: testDerivative.cpp  testEval.cpp  testInvertMap.cpp  testMapInv.cpp  testTensorFunction.cpp  testTensors.cpp  testTypes.cpp  testValue.cpp  testVariables.cpp
tests/expr/: testExprAdd.cpp  testExprErf.cpp  testExprFMA.cpp  testExprHyp.cpp  testExprInvHyp.cpp  testExprInvTrig.cpp  testExprLog.cpp  testExprMul.cpp  testExprPow.cpp  testExprPower.cpp  testExprTrig.cpp  testExprUnary.cpp
tests/foundation/: testCombinatorics.cpp  testEnumeration.cpp
tests/hermite/: testHermiteBasic.cpp
tests/kernels/: testKernels.cpp
tests/legendre/: testLegendreBasic.cpp
tests/ode/: testIntegrateAds.cpp  testTaylorIntegrate.cpp  testTaylorIntegrator.cpp  testTaylorStep.cpp  testTaylorTwoBody.cpp
tools/: install_eigen.sh
